--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 project(torch_ccl)
-
+set(CMAKE_CXX_STANDARD 17)
 # Find modules.
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
@@ -10,7 +10,7 @@ set(DEPENDS_LIB)
 find_package(CCL REQUIRED)
 list(APPEND DEPENDS_LIB ${CCL_LIBRARY})
 
-set(OCCL_SRCS src/init.cpp src/ProcessGroupCCL.cpp src/cpu/cpu_ccl.cpp src/gpu/dpcpp_ccl.cpp src/dispatch_stub.cpp)
+set(OCCL_SRCS src/init.cpp src/ProcessGroupCCL.cpp src/cpu/cpu_ccl.cpp src/gpu/dpcpp_ccl.cpp src/dispatch_stub.cpp src/utils.cpp src/ccl_comm_collector.cpp)
 
 IF(COMPUTE_RUNTIME STREQUAL "dpcpp" OR COMPUTE_RUNTIME STREQUAL "native")
     # import sycl SYCL
