--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 project(torch_ccl)
 set(CMAKE_CXX_STANDARD 17)
 # Find modules.
@@ -88,11 +88,18 @@ if(USE_DPCPP)
     set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fsycl -fsycl-device-code-split=per_source")
 endif()
 
+get_target_property(mpi_lib mpi IMPORTED_LOCATION)
+get_target_property(fabric_lib fabric IMPORTED_LOCATION)
+target_link_directories(torch_ccl PRIVATE ${PYTORCH_LIBRARY_DIRS})
+target_link_directories(torch_ccl PRIVATE ${IPEX_LIBRARY_DIRS})
+get_filename_component(MPI_LIBRARY_DIRS ${mpi_lib} DIRECTORY)
+get_filename_component(FABRIC_LIBRARY_DIRS ${fabric_lib} DIRECTORY)
+target_link_directories(torch_ccl PRIVATE ${MPI_LIBRARY_DIRS} ${FABRIC_LIBRARY_DIRS})
 target_link_libraries(torch_ccl PRIVATE ${DEPENDS_LIB})
-link_directories(${PYTORCH_LIBRARY_DIRS})
-target_link_libraries(torch_ccl PUBLIC ${PYTORCH_LIBRARY_DIRS}/libtorch_python.so)
-target_link_libraries(torch_ccl PUBLIC ${IPEX_LIBRARY_DIRS}/torch_ipex.so)
+target_link_libraries(torch_ccl PRIVATE libtorch_python.so)
+target_link_libraries(torch_ccl PRIVATE ${IPEX_LIBRARY_DIRS}/torch_ipex.so)
 
+install(TARGETS torch_ccl ccl LIBRARY DESTINATION lib)
 
 function (print_configuration_summary)
     get_directory_property(CMAKE_COMPILE_DEFINITIONS DIRECTORY ${CMAKE_SOURCE_DIR} COMPILE_DEFINITIONS)
@@ -114,7 +121,7 @@ function (print_configuration_summary)
     message(STATUS "  Compile definitions   : ${CMAKE_COMPILE_DEFINITIONS}")
     message(STATUS "  Linker options        : ${CMAKE_SHARED_LINKER_FLAGS}")
     get_target_property(LINK_LIBRARIES torch_ccl LINK_LIBRARIES)
-    message(STATUS "  Linker libraries        : ${LINK_LIBRARIES}")
+    message(STATUS "  Linker directors        : ${LINK_LIBRARIES}")
     get_target_property(LINK_DIRECTORS torch_ccl LINK_DIRECTORIES)
     message(STATUS "  Linker libraries        : ${LINK_DIRECTORS}")
 
