--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ torch_ccl/include/
 torch_ccl/lib/
 torch_ccl/bin/
 torch_ccl/etc/
+torch_ccl/env/
 torch_ccl/examples/
 torch_ccl/licensing/
 torch_ccl/modulefiles/
