--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,10 @@ set_target_properties(torch_ccl PROPERTIES OUTPUT_NAME ${LIB_NAME})
 set_target_properties(torch_ccl PROPERTIES POSITION_INDEPENDENT_CODE ON)
 GetOCCLLibName(${LIB_NAME})
 
+if(DEFINED PY_MODULE)
+  add_definitions(-DPY_MODULE)
+endif()
+
 target_compile_options(torch_ccl PRIVATE
         -Wall
         -Wextra
