Clean up the name in the code. 1. "occl" to "ccl" 2. "dpcpp" to "xpu"

--- a/.gitignore
+++ b/.gitignore
@@ -163,7 +163,7 @@ caffe2/version.py
 
 # setup.py intermediates
 .eggs
-occl.egg-info
+torch_ccl.egg-info
 
 # Atom/Watchman required file
 .watchmanconfig
