Clean up the code for being third-party code in torch-ipex.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,16 @@
 cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 project(torch_ccl)
 set(CMAKE_CXX_STANDARD 14)
-# Find modules.
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
-set(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY true)
 
-IF(COMPUTE_RUNTIME STREQUAL "dpcpp")
-    include(cmake/DPCPP.cmake)
-ENDIF()
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
+
+set(RPATH_VALUE $ORIGIN)
+set(CMAKE_SKIP_BUILD_RPATH  FALSE)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+set(CMAKE_INSTALL_RPATH "${RPATH_VALUE}")
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH FALSE)
+
+set(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY true)
 
 set(DEPENDS_LIB)
 
@@ -16,7 +19,7 @@ find_package(oneCCL REQUIRED)
 list(APPEND DEPENDS_LIB ${ONECCL_LIBRARIES})
 
 if(NOT DEFINED LIB_NAME)
-    SET(LIB_NAME "libtorch_ccl.so")
+    SET(LIB_NAME "torch_ccl")
 endif()
 
 add_subdirectory(./src)
