--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,11 @@ target_compile_options(torch_ccl PUBLIC -Wall
         -Wno-sign-compare
         -Wno-unused-function)
 
+if(COMPUTE_RUNTIME STREQUAL "dpcpp")
+    target_compile_options(torch_ccl PUBLIC -fsycl)
+    add_subdirectory(./gpu)
+endif()
+
 target_include_directories(torch_ccl PUBLIC ${ONECCL_INCLUDE_DIR} ${PYTHON_INCLUDE_DIRS} ${PYTORCH_INCLUDE_DIRS} ${IPEX_INCLUDE_DIRS} ./)
 
 get_target_property(mpi_lib mpi IMPORTED_LOCATION)
