--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,14 @@ if(NOT DEFINED LIB_NAME)
 endif()
 
 #workaroud patch for oneCCL link issue
-execute_process(COMMAND bash -c "git apply patches/Fix_the_link_path_issue_in_oneCCL.patch"
-                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+find_package(Patch)
+if(Patch_FOUND)
+  message("Patch found: ${Patch_EXECUTABLE}")
+else()
+  message(FATAL_ERROR, "Did not find patch")
+endif()
+set (patch_file "${CMAKE_CURRENT_SOURCE_DIR}/patches/Fix_the_link_path_issue_in_oneCCL.patch")
+execute_process(COMMAND ${Patch_EXECUTABLE} -p1 -i ${patch_file} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(./src)
 
