Temp checkin build system ABI issue fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=cpp")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wformat-security")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fstack-protector")
 
+find_package(Torch REQUIRED)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
+
 set(LINUX TRUE)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_INSTALL_MESSAGE NEVER)
@@ -60,9 +63,9 @@ function (print_configuration_summary)
     message(STATUS "  Compile definitions   : ${CMAKE_COMPILE_DEFINITIONS}")
     message(STATUS "  Linker options        : ${CMAKE_SHARED_LINKER_FLAGS}")
     get_target_property(LINK_LIBRARIES torch_ccl LINK_LIBRARIES)
-    message(STATUS "  Linker directors        : ${LINK_LIBRARIES}")
+    message(STATUS "  Linker libraries        : ${LINK_LIBRARIES}")
     get_target_property(LINK_DIRECTORS torch_ccl LINK_DIRECTORIES)
-    message(STATUS "  Linker libraries        : ${LINK_DIRECTORS}")
+    message(STATUS "  Linker directors        : ${LINK_DIRECTORS}")
 
     message(STATUS "")
 endfunction()
