--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ if(COMPUTE_RUNTIME STREQUAL "dpcpp")
     add_subdirectory(./gpu)
 endif()
 
-target_include_directories(torch_ccl PUBLIC ${ONECCL_INCLUDE_DIR} ${PYTHON_INCLUDE_DIRS} ${PYTORCH_INCLUDE_DIRS} ${IPEX_INCLUDE_DIRS} ./)
+target_include_directories(torch_ccl PUBLIC ${ONECCL_INCLUDE_DIR} ${TORCH_INCLUDE_DIRS} ${IPEX_INCLUDE_DIRS} ./)
 
 get_target_property(mpi_lib mpi IMPORTED_LOCATION)
 get_filename_component(MPI_LIBRARY_DIRS ${mpi_lib} DIRECTORY)
@@ -20,9 +20,8 @@ get_target_property(fabric_lib fabric IMPORTED_LOCATION)
 get_filename_component(FABRIC_LIBRARY_DIRS ${fabric_lib} DIRECTORY)
 target_link_directories(torch_ccl PUBLIC ${MPI_LIBRARY_DIRS} ${FABRIC_LIBRARY_DIRS})
 
-target_link_directories(torch_ccl PUBLIC ${PYTORCH_LIBRARY_DIRS})
 target_link_libraries(torch_ccl PUBLIC ${DEPENDS_LIB})
-target_link_libraries(torch_ccl PUBLIC libtorch_python.so)
+target_link_libraries(torch_ccl PUBLIC ${TORCH_LIBRARIES})
 
 set_target_properties(torch_ccl PROPERTIES LINK_FLAGS "-Wl,-rpath,${CMAKE_INSTALL_RPATH}")
 
